--- a/files/buildspec_checkov.yml
+++ b/files/buildspec_checkov.yml
@@ -2,7 +2,8 @@ version: 0.2
 
 env:
   variables:
-    TF_VERSION: "1.2.9"
+    TF_VERSION: ""
+    SKIP-CHECK: ""
 
 phases:
 
@@ -19,7 +20,7 @@ phases:
   build:
     commands:   
       - cd "$CODEBUILD_SRC_DIR"
-      - checkov --directory ./ --skip-check CKV_AWS_18,CKV_AWS_144,CKV_AWS_147,CKV_AWS_158,CKV_AWS_184,CKV_AWS_7,CKV_AWS_145,CKV_AWS_136,CKV_AWS_219,CKV_AWS_109,CKV_AWS_111,CKV2_AWS_38,CKV2_AWS_39,
+      - checkov --directory ./ --skip-check $SKIP-CHECK
 
   post_build:
     commands:
